<resources>
    <string name="app_name">Mont Plus</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_ingresar">Ingrese sus datos para ingresar</string>
    <string name="login_iniciar">Iniciar Sesión</string>
    <string name="login_hint_usuario">Ingresar usuario</string>
    <string name="login_tx_usuario">Usuario</string>
    <string name="login_hint_contra">Ingresar contraseña</string>
    <string name="login_tx_contra">Contraseña</string>
    <string name="login_tx_recuerdame">Recuérdame</string>
    <string name="inicio_nav_nombreape">Nombre Apellido</string>
    <string name="menu_nav_clientes">Clientes</string>
    <string name="menu_nav_productos">Productos</string>
    <string name="menu_nav_pedidos">Toma Pedidos</string>
    <string name="inicio_nav_usuario">usuario</string>
    <string name="st_menu_nav_clientes_agrega">Agregar clientes</string>
    <string name="st_menu_nav_clientes_listado">Listado de clientes</string>
    <string name="st_menu_nav_pructos_agregar">Agregar productos</string>
    <string name="st_menu_nav_pructos_listado">Listado de productos</string>
    <string name="st_menu_nav_pedidos_agregar">Agregar pedidos</string>
    <string name="st_menu_nav_pedidos_listado">Listado de pedidos</string>
    <string name="st_menu_nav_inicio">Inicio</string>
    <string name="navigation_drawer_open">Abierto</string>
    <string name="navigation_drawer_close">Cerrado</string>
    <string name="st_menu_nav">Menu</string>
    <string name="st_inicio_toma_pedido">Toma pedido</string>
    <string name="st_inicio_ingreso_cobranzas">Ingreso de cobranzas</string>
    <string name="st_inicio_revisar_gestionar">Revisar y gestionar las linesas de crédito y saldos de clientes</string>
    <string name="st_inicio_revisar_compras">Revisar las compras detalladas</string>
    <string name="st_pedidos_listado_inicio">Inicio</string>
    <string name="st_pedidos_listado_agregar_nuevo">Agregar nuevo</string>
    <string name="st_pedidos_listado_buscar">Buscar</string>
    <string name="st_pedidos_listado_regresar">Regresar</string>
    <string name="st_pedidos_agregar_buscar_cliente">Buscar clientes</string>
    <string name="st_pedidos_agregar_nombrecliente">Nombre del cliente</string>
    <string name="st_pedidos_agregar_documentocliente">Documento del cliente</string>
    <string name="st_pedidos_agregar_direcciones">Direcciones</string>
    <string name="st_pedidos_agregar_condicion">Condición de pago</string>
    <string name="st_pedidos_agregar_tipocliente">Tipo de cliente</string>
    <string name="st_pedidos_agregar_cargar_productos">Cargar productos</string>
    <string name="st_pedidos_agregar_productos">Productos</string>
    <string name="st_pedidos_agregar_promocion">Promoción</string>
    <string name="st_pedidos_agregar_costo">Costo</string>
    <string name="st_pedidos_agregar_cantidad">Cantidad</string>
    <string name="st_pedidos_agregar_subtotal">Subtotal</string>
    <string name="st_pedidos_agregar_total">Total</string>
    <string name="st_pedidos_agregar_despacho">Despacho con la camioneta</string>
    <string name="st_pedidos_agregar_fecha">Fecha de entrega</string>
    <string name="st_pedidos_agregar_fecha_tipe">dd / mm / aaaa</string>
    <string name="st_pedidos_agregar_observaciones">Obervaciones</string>
    <string name="st_agregar_pedidos_registrar">Registrar</string>
    <string name="st_listado_agregar_pedido">Pedido</string>
    <string name="st_listado_agregar_total_pedido">Total pedido</string>
    <string name="st_listado_agregar_estado">Estado</string>
    <string name="st_listado_agregar_cliente">Cliente</string>
    <string name="st_listado_agregar_fecha">Fecha</string>
    <string name="st_listado_agregar_opciones">Opciones</string>
    <string name="st_listado_agregar_pagar">Pagar</string>
    <string name="password_error">Contraseña es obligatorio</string>
    <string name="usuario_error">Usuario es obligatorio</string>
    <string name="credenciales_error">Las credenciales no coinciden</string>
    <string name="bienvenido">"Bienvenido/a "</string>
    <string name="st_login_bienvenido">¡Bienvenido!</string>
    <string name="st_pedidos_pagar_banco">Banco</string>
    <string name="st_pedidos_pagar_op">OP</string>
    <string name="st_pedidos_pagar_monto">Monto</string>
    <string name="st_pedidos_pagar_cuenta">Cuenta</string>
    <string name="st_pedidos_pagar_foto">Foto</string>
    <string name="st_pagar_pedidos_guardar">Guardar</string>
    <string name="ingresar_direcciones">Debe seleccionar una dirección</string>
    <string name="ingresar_opciones">Debe seleccionar una opción</string>
    <string name="st_buscar_clientes_title">Clientes</string>
    <string name="st_pedidos_agregar_dialog_ruc">RUC del  cliente</string>
    <string name="st_pedidos_agregar_coa_dialog">Ingresar coa</string>
    <string name="st_pedidos_agregar_nombre_dialog">Nombre del cliente</string>
    <string name="st_pedidos_agregar_ruc_dialog">RUC</string>
    <string name="st_pedidos_agregar_opciones_dialog">Opciones</string>
    <string name="st_pedidos_agregar_cliente_dialog">Agregar</string>
    <string name="st_buscar_productos_title">Productos</string>
    <string name="st_buscar_productos_stocks_title">Stocks</string>
    <string name="st_buscar_productos_agregar_title">Agregar</string>
    <string name="st_pedidos_producto_dialog_buscador">Nombre del producto</string>
    <string name="st_pedidos_producto_costo_dialog">Ingresar costo</string>
    <string name="st_agregar_pedidos_guardar">Guardar</string>
    <string name="st_agregar_pedidos_cancelar">Cancelar</string>
    <string name="st_pedidos_producto_cantidad_dialog">Ingresar cantidad</string>
    <string name="st_cerrar">Cerrar</string>
    <string name="st_buscar_almacen_title">Almacen</string>
    <string name="st_buscar_lote_title">Lote</string>
    <string name="st_buscar_cantidad_title">Cantidad</string>
    <string name="st_buscar_vencimiento_title">Vencimiento</string>
    <string name="menu_nav_cobranzas">Cobranzas</string>
    <string name="st_nav_cobranzas_listado">Lista de cobranzas</string>
    <string name="tipo_cliente">Tipo de cliente</string>
    <string name="select_tipo_cliente">Seleccionar un tipo de cliente</string>
    <string name="tipo_condicion">Tipo de condición de pago</string>
    <string name="select_direccion">Seleccionar dirección</string>
    <string name="direccion">Direccion</string>
    <string name="select_tipo_condicion">Seleccionar tipo de condicion</string>
    <string name="direccion_vacia">No se encontraron direcciones del cliente seleccionado</string>
    <string name="error_numero_productos">El pedido debe contener al menos un pedido</string>
    <string name="error_fecha">Debe seleccionar una fecha</string>
    <string name="error_permisos_localizacion">Debe habilitar el GPS para realizar un pedido</string>


</resources>