<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_dialog"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_pedidos_productos_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_buscar_productos_title"
            android:textColor="@color/black"
            android:textSize="@dimen/xxlarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_productos_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pedidos_productos_dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_pedidos_productos_dialog_title"
            app:srcCompat="@drawable/ic_baseline_close_24" />


        <View
            android:id="@+id/v_pedidos_productos_dialog_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pedidos_productos_dialog_title" />


        <!-- Nombre del producto -->
        <TextView
            android:id="@+id/tv_producto_nombre_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/st_pedidos_producto_dialog_buscador"
            android:textSize="@dimen/tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/v_pedidos_productos_dialog_divider" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_producto_nombre_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_textview_more_tiny"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/st_pedidos_producto_dialog_buscador"
            android:padding="3dp"
            android:textSize="@dimen/normal_tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_producto_nombre_dialog" />


        <TextView
            android:id="@+id/tv_producto_promocion_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/st_pedidos_agregar_promocion"
            android:textSize="@dimen/tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_producto_nombre_dialog" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_producto_promocion_dialog"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_producto_promocion_dialog" />


        <TextView
            android:id="@+id/tv_producto_costo_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/st_pedidos_agregar_costo"
            android:textSize="@dimen/tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_producto_promocion_dialog" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_producto_costo_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_editext_more_tiny"
            android:hint="@string/st_pedidos_producto_costo_dialog"
            android:padding="3dp"
            android:inputType="numberDecimal"
            android:textSize="@dimen/normal_tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_producto_costo_dialog" />


        <TextView
            android:id="@+id/tv_producto_cantidad_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/st_pedidos_agregar_cantidad"
            android:textSize="@dimen/tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_producto_costo_dialog" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_producto_cantidad_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_editext_more_tiny"
            android:hint="@string/st_pedidos_producto_cantidad_dialog"
            android:padding="3dp"
            android:inputType="number"
            android:textSize="@dimen/normal_tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_producto_cantidad_dialog" />

        <TextView
            android:id="@+id/tv_producto_subtotal_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/st_pedidos_agregar_subtotal"
            android:textSize="@dimen/tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_producto_cantidad_dialog" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_producto_subtotal_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border_textview_more_tiny"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="0"
            android:padding="3dp"
            android:textSize="@dimen/normal_tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_producto_subtotal_dialog" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pedidos_agregar_guardar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_gradiente_login_button"
            android:text="@string/st_agregar_pedidos_guardar"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_tiny"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_pedidos_agregar_cancelar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_producto_subtotal_dialog"
            app:layout_constraintVertical_bias="0.90" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pedidos_agregar_cancelar"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_gradiente_login_button"
            android:text="@string/st_agregar_pedidos_cancelar"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_tiny"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_pedidos_agregar_guardar"
            app:layout_constraintTop_toBottomOf="@+id/et_producto_subtotal_dialog"
            app:layout_constraintVertical_bias="0.90" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>